--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "A Testrail reporter for cypress including TestRail API basic library",
   "main": "index.js",
   "private": false,
-  "keywords": ["cypress", "testrail", "reporter"],
+  "keywords": [
+    "cypress",
+    "testrail",
+    "reporter"
+  ],
   "author": {
     "name": "Milutin Savovic",
     "email": "mickosavovic@gmail.com"
@@ -33,7 +37,7 @@
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/mocha": "^2.2.36",
-    "@types/node": "^6.0.58",
+    "@types/node": "^6.14.9",
     "chai": "^3.5.0",
     "rimraf": "^2.5.4",
     "typescript": "^2.1.4"
